--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.1",
+    "@trendmicro/react-sidenav": "^0.4.5",
+    "material-ui": "^0.20.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-github-fork-ribbon": "^0.6.0",
